# Project_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dependence/: reader.cpp  reader.hpp
dependence/nanoflann/: nanoflann.hpp  util.h
dependence/rapidjson/: CMakeLists.txt
report/: Project 2 Report.pages  Project 2 Report_.pages
results/Bonsai/: Untitled
results/Bonsai/original_slicing/: original_z_120.ppm  original_z_125.ppm  original_z_130.ppm  original_z_137.ppm  original_z_140.ppm  original_z_145.ppm  original_z_150.ppm  original_z_160.ppm  original_z_170.ppm  original_z_180.ppm
results/Bonsai/slice_at_z_135/: Average_Pixel_Error.rtf  hardy_global_R_10.ppm  hardy_local_R_10.ppm  hardy_local_reciporal_R_10.ppm  original_z_135.ppm  sampled.ppm  shepard_global.ppm  shepard_local.ppm
results/Sphere/: interpolated_hardy_global.ppm  interpolated_hardy_local.ppm  interpolated_shepard_global.ppm  interpolated_shepard_local.ppm  original.ppm  random_sampled.ppm
results/Sphere/different_Neighbors/: interpolated_shepard_2_local_neighbors_1.ppm  interpolated_shepard_2_local_neighbors_10.ppm  interpolated_shepard_2_local_neighbors_2.ppm  interpolated_shepard_2_local_neighbors_3.ppm  interpolated_shepard_2_local_neighbors_4.ppm  interpolated_shepard_2_local_neighbors_5.ppm  interpolated_shepard_2_local_neighbors_6.ppm  interpolated_shepard_2_local_neighbors_7.ppm  interpolated_shepard_2_local_neighbors_8.ppm  interpolated_shepard_2_local_neighbors_9.ppm
src/: Color.cpp  Color.hpp  ColorMap.hpp  DataSource.hpp  Interpolation.hpp  RandNumGenerator.hpp  ScatterPoint.hpp  Timer.cpp  Timer.hpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  utils.cpp  utils.hpp
(+9 files in other folders)
